@@ -18,9 +18,12 @@ import org.springframework.context.annotation.ComponentScan;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 
+import java.lang.reflect.Field;
 import java.time.LocalDate;
 import java.util.*;
+import java.util.stream.Collectors;
 
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.*;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -36,56 +39,42 @@ public class KuponServiceTest{
     @Mock
     KuponRepository kuponRepository;
 
-    @Autowired
-    private EntityManager entityManager;
-
-    @Autowired
-    private UserRepository userRepository;
-
-    @Autowired
+    @Mock
     private KostRepository kostRepository;
 
     List<Kupon> kuponList = new ArrayList<>();
 
     @BeforeEach
     void setUp() {
-        Role adminRole = new Role("Admin");
-        Role pemilikKos = new Role("Pemilik Kos");
-
-        entityManager.persist(adminRole);
-        entityManager.persist(pemilikKos);
-
-        Set<Role> role1 = new HashSet<>();
-        role1.add(adminRole);
-        Set<Role> role2 = new HashSet<>();
-        role2.add(pemilikKos);
-
-        User admin = new User("Admin", "123456", "admin@example.com", role1);
-        User pemilik1 = new User("Ahmad Suardjo", "Ahm@d321!", "ahmadss@gmail.com", role2);
-        User pemilik2 = new User("Janice Lim", "J@N1C3005", "janicelim@gmail.com", role2);
-        userRepository.save(admin);
-        userRepository.save(pemilik1);
-        userRepository.save(pemilik2);
-
         Kost kos1 = new Kost("Kos Alamanda", "Jl. Melati No. 1", "Nyaman", 10, 1000000);
         Kost kos2 = new Kost("Kos Griya Asri", "Jl. Anggrek No. 2", "Asri", 8, 950000);
         Kost kos3 = new Kost("Kos Amara 51/2", "Jl. KH. Ahmad Dahlan No. 120", "Mantap", 22, 1900000);
         Kost kos4 = new Kost("Kos Zano's", "Jl. Juragan Sinda III No. 19", "Parkiran aman dan lingkungan tentram", 2, 1100000);
         Kost kos5 = new Kost("Kos Pinisia", "Jl. Sadewa IV No. 13", "Tetangga ramah dan Asri", 12, 1500000);
+        when(kostRepository.save(any(Kost.class))).thenAnswer(invocation -> {
+                    Kost kos = invocation.getArgument(0);
+                    if (kos.getKostID() == null) {
+                        Field field = Kost.class.getDeclaredField("kostID");
+                        field.setAccessible(true);
+                        field.set(kos, UUID.randomUUID());
+                    }
+                    return kos;
+                }
+        );
         kostRepository.save(kos1);
         kostRepository.save(kos2);
         kostRepository.save(kos3);
         kostRepository.save(kos4);
         kostRepository.save(kos5);
 
-        kuponList.add(new Kupon(admin, List.of(kos1, kos2, kos3, kos4, kos5), LocalDate.of(2026, 10, 15), 7, "Kupon Hari Pahlawan 2025"));
-        kuponList.add(new Kupon(pemilik1, List.of(kos1, kos2, kos3), LocalDate.of(2025, 10, 20), 12, "Promo Pak Ahmad"));
-        kuponList.add(new Kupon(pemilik2, List.of(kos4, kos5), LocalDate.of(2026, 2, 10), 10, "Kupon Semester Baru"));
+        kuponList.add(new Kupon(List.of(kos1, kos2, kos3, kos4, kos5), "Kupon Pahlawan",LocalDate.of(2026, 10, 15), 7, "Kupon Hari Pahlawan 2025", 6));
+        kuponList.add(new Kupon(List.of(kos1, kos2, kos3), "Kupon Ahmad",LocalDate.of(2025, 10, 20), 12, "Promo Pak Ahmad", 3));
+        kuponList.add(new Kupon(List.of(kos4, kos5), "Kupon Maba",LocalDate.of(2026, 2, 10), 10, "Kupon Semester Baru", 2));
     }
 
     @Test
     void testCreateKupon(){
-        Kupon selectedKupon = kuponList.get(0);
+        Kupon selectedKupon = kuponList.getFirst();
         when(kuponRepository.save(any(Kupon.class))).thenAnswer(invocation -> invocation.getArgument(0));
         Kupon inputKupon = kuponService.createKupon(selectedKupon);
 
@@ -94,33 +83,61 @@ public class KuponServiceTest{
     }
 
     @Test
-    void testUpdateKuponSuccess(){
-        Kupon selectedKupon = kuponList.get(1);
-        when(kuponRepository.save(any(Kupon.class))).thenAnswer(invocation -> invocation.getArgument(0));
+    void testUpdateKuponSuccess() {
+        Kupon selectedKupon = kuponList.getFirst();
+
+        when(kuponRepository.save(any(Kupon.class))).thenAnswer(invocation -> {
+            Kupon kupon = invocation.getArgument(0);
+            if (kupon.getIdKupon() == null) {
+                try {
+                    Field field = Kupon.class.getDeclaredField("idKupon");
+                    field.setAccessible(true);
+                    field.set(kupon, UUID.randomUUID());
+                } catch (Exception e) {
+                    throw new RuntimeException(e);
+                }
+            }
+            return kupon;
+        });
+
         Kupon inputKupon = kuponService.createKupon(selectedKupon);
 
-        when(kuponRepository.findById(inputKupon.getIdKupon())).thenReturn(Optional.of(inputKupon));
-        Kupon resultKupon = kuponService.getKuponById(inputKupon.getIdKupon());
+        List<UUID> kostIds = inputKupon.getKosPemilik().stream()
+                .map(Kost::getKostID)
+                .collect(Collectors.toList());
 
-        resultKupon.setDeskripsi("Kupon Khusus Mahasiswa Universitas Indonesia");
-        resultKupon.setPersentase(25);
-        resultKupon.setMasaBerlaku(LocalDate.of(2027, 10, 22));
-        Kupon updatedKupon = kuponService.updateKupon(resultKupon);
+        when(kuponRepository.findById(inputKupon.getIdKupon()))
+                .thenReturn(Optional.of(inputKupon));
 
-        assertThat(selectedKupon.getIdKupon()).isEqualTo(updatedKupon.getIdKupon());
-        assertThat(selectedKupon.getKodeUnik()).isEqualTo(updatedKupon.getKodeUnik());
+        when(kostRepository.findAllById(kostIds))
+                .thenReturn(new ArrayList<>(inputKupon.getKosPemilik()));
+
+        // Perform update
+        Kupon updatedKupon = kuponService.updateKupon(
+                inputKupon.getIdKupon(),
+                kostIds,
+                25,
+                "Kupon UI",
+                LocalDate.of(2027, 10, 22),
+                "Kupon Khusus Mahasiswa Universitas Indonesia",
+                2
+        );
+
+        assertThat(updatedKupon.getIdKupon()).isEqualTo(inputKupon.getIdKupon());
+        assertThat(updatedKupon.getKodeUnik()).isEqualTo(inputKupon.getKodeUnik());
+        assertThat(updatedKupon.getPersentase()).isEqualTo(25);
+        assertThat(updatedKupon.getMasaBerlaku()).isEqualTo(LocalDate.of(2027, 10, 22));
+        assertThat(updatedKupon.getDeskripsi()).isEqualTo("Kupon Khusus Mahasiswa Universitas Indonesia");
     }
+
 
     @Test
     void testUpdateKuponFail() {
-        Kupon selectedKupon = kuponList.get(0);
-
         when(kuponRepository.findById(kuponList.get(1).getIdKupon()))
                 .thenReturn(Optional.empty());
 
-        assertThatThrownBy(() -> kuponService.updateKupon(kuponList.get(1)))
-                .isInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("tidak ditemukan");
+        assertThatThrownBy(() -> kuponService.updateKupon(kuponList.get(1).getIdKupon(), kuponList.get(1).getKosPemilik().stream().map(Kost::getKostID).collect(Collectors.toList()), kuponList.get(1).getPersentase(), kuponList.get(1).getNamaKupon(), kuponList.get(1).getMasaBerlaku(), kuponList.get(1).getDeskripsi(), kuponList.get(1).getQuantity()))
+                .isInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
@@ -151,7 +168,7 @@ public class KuponServiceTest{
 
     @Test
     void testGetKuponByKodeUnikSuccess() {
-        Kupon selectedKupon = kuponList.get(0);
+        Kupon selectedKupon = kuponList.getFirst();
         when(kuponRepository.findByKodeUnik(selectedKupon.getKodeUnik()))
                 .thenReturn(Optional.of(selectedKupon));
 
